--- a/css/darkness.css
+++ b/css/darkness.css
@@ -120,10 +120,6 @@ input[type='text'] {
   border: 1px solid #59B4D4;
 }
 
-.ui-tabs .ui-tabs-nav li a {
-  padding: 0.3em 0.9em;
-}
-
 .tweet {
   background-color: #000;
   border-bottom: 1px solid #666;
